style: fixed some overflow bugs in the table and modals

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 1600px;
   margin-top: 5rem;
   padding: 2rem;
   text-align: center;
